tests/script_errors/lexer_invalid_int_invalid_char/error.txt
Error: 
    1 | 12345j
      |      ^ An unexpected character 'j' was found
